--- a/popup.html
+++ b/popup.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
   <head>
-    <title>Event Lookup</title>
+    <title>Event Loader</title>
     <script src="popup.js"></script>
   </head>
   <body style="background-color: #dddddd; width: 300px;">
-    <h1 style="color: black; font-weight: lighter;">Event Lookup Loader</h1>
+    <h1 style="color: black; font-weight: lighter;">Event Loader</h1>
     <h4 style="color: black; line-height: 1.6em; font-weight: lighter; font-size: 13px;">To use this extension, ensure you're in the events tab <br>
     	of the admin and have <b>Toggle Analyst</b> disabled.</h4>
     <button id="loadData" style="color:black; font-size: 1.2em; font-weight: thin; float: center; border: black 1px solid; background-color: #dddddd; outline:0;">LOAD EVENTS</button>
