--- a/popup.html
+++ b/popup.html
@@ -5,16 +5,14 @@
     <script src="popup.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
-  <body style="background-color: #dddddd; width: 300px;">
-    <h1 style="color: black; font-weight: lighter;">Event Loader</h1>
+  <body>
+    <h1>Trigger Pull</h1>
     
-    <h4 style="color: black; line-height: 1.6em; font-weight: lighter; font-size: 13px;">To use this extension, ensure you're in the events tab <br>
-    	of the admin and have <b>Toggle Analyst</b> disabled.</h4>
+    <h4>Type the desired word you'd like to remove, and the one you'd like to replace it with.</h4>
 
-    <button id="loadData" style="color:black; font-size: 1.2em; font-weight: thin; float: right; border: black 1px solid; background-color: #dddddd; outline:0;">LOAD EVENTS</button><br><br> 
-    <br>
-    <input type="text" class="text" style="float:center; width: 55%; height: 15%; vertical-align: bottom;">
-    <button id="filterData" style="color:black; font-size: 1.2em; font-weight: thin; float: right; border: black 1px solid; background-color: #dddddd; outline:0; margin-bottom: 10px;">FILTER EVENTS</button>
+    <input type="text" class="undesiredWord">
+    <input type="text" class="replaceWith">
+    <button id="filterData">FILTER</button>
      
 
   </body>
