--- a/popup.html
+++ b/popup.html
@@ -1,17 +1,17 @@
 <!doctype html>
 <html>
   <head>
-    <title>Event Loader</title>
+    <title>Log Parser</title>
     <script src="popup.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <h1>Trigger Pull</h1>
+    <h1>Log Parser</h1>
     
-    <h4>Type the desired word you'd like to remove, and the one you'd like to replace it with.</h4>
+    <h4>Click to filter logs for failures.</h4>
 
-    <input type="text" class="undesiredWord">
-    <input type="text" class="replaceWith">
+<!--     <input type="text" class="undesiredWord">
+    <input type="text" class="replaceWith"> -->
     <button id="filterData">FILTER</button>
      
 
